Доработка кода